2. ResourceLoaderAware Interface